--- a/gioithieu.html
+++ b/gioithieu.html
@@ -19,21 +19,22 @@
 <body>
     <div class="container-fluid" id="header">
         <div id="banner">
-            <!-- <img src="images/BM8U6FrysCcQpXoqJzgl.webp" alt="" style="width:100%; height: 480px;"> -->
-            <div class="container" style="padding-top: 350px;">
-                <div id="logo_head">
-                    <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
-                </div>
-                <div id="name_head">
-                    <h1>Công ty TNHH Bibabo</h1>
-                    <div>
-                        <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+            <div class="cover_body">
+                <div class="container">
+                    <div id="logo_head">
+                        <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
+                    </div>
+                    <div id="name_head">
+                        <h1>Công ty TNHH Bibabo</h1>
+                        <div>
+                            <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container" id="menu">
-            <ul class="nav justify-content-center nav_fix d-flex">
+            <ul class="nav justify-content-center ">
                 <li class="nav-item">
                     <a class="nav-link " href="index.html">Trang chủ</a>
                 </li>
@@ -87,22 +88,22 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <div class="row text-center">
-                            <div class="col-md-4" style="background: #fff; border-right: 1px solid #c8c8c8;">
+                            <div class="col-md-4 border_wrapper" style="background: #fff; ">
                                 <div class="box">
                                     <div class="icon-box item-box"><i class="far fa-calendar-alt"></i></div>
                                     <div class="title-box item-box">Năm thành lập</div>
                                     <div class="val-box item-box">2016</div>
                                 </div>
                             </div>
-                            <div class="col-md-4" style="background: #fff; border-right: 1px solid #c8c8c8;">
+                            <div class="col-md-4 border_wrapper" style="background: #fff; ">
                                 <div class="box">
                                     <div class="icon-box item-box"><i class="fas fa-users"></i></div>
                                     <div class="title-box item-box">Quy mô công ty</div>
                                     <div class="val-box item-box">100-499</div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="box" style="background: #fff;">
+                            <div class="col-md-4" style="background: #fff;">
+                                <div class="box">
                                     <div class="icon-box item-box"><i class="fas fa-birthday-cake"></i></div>
                                     <div class="title-box item-box">Tuổi trung bình</div>
                                     <div class="val-box item-box">25</div>
@@ -138,8 +139,7 @@
                                 con cái và gia
                                 đình được Dễ dàng hơn - Hạnh phúc hơn!</p>
                             <div style="margin: 10px 0;">
-                                <a class="btn btn-primary" href="#">Tìm hiểu thêm <i
-                                        class="fas fa-angle-right"></i></a>
+                                <a class="btn btn-primary" href="#">Tìm hiểu thêm <i class="fas fa-angle-right"></i></a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-12">
@@ -159,21 +159,26 @@
                 </div>
                 <div class="main_bottom">
                     <div class="gallery-content" style="margin: 0px 80px;">
-                        <div class="row" >
+                        <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12" style="padding:10px">
-                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg" alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
+                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg"
+                                    alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
                             </div>
                             <div class="col-md-4 col-sm-6 col-xs-12" style="padding:10px">
-                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg" alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
+                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg"
+                                    alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
                             </div>
                             <div class="col-md-4 col-sm-6 col-xs-12" style="padding:10px">
-                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg" alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
+                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg"
+                                    alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
                             </div>
                             <div class="col-md-4 col-sm-6 col-xs-12" style="padding:10px">
-                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg" alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
+                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg"
+                                    alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
                             </div>
                             <div class="col-md-4 col-sm-6 col-xs-12" style="padding:10px">
-                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg" alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
+                                <img src="https://static.topcv.vn/premium_companies/images/c6d15067a4d5be02258eb9e1db85b7dd-5f55f21be48f6.jpg"
+                                    alt="" style="margin: 0 auto; height: 145px; max-width: 100%;">
                             </div>
                         </div>
                     </div>
@@ -183,14 +188,15 @@
         <div class="container">
             <div id="policy">
                 <div class="row text-center">
-                    <div class="col-md-4" >
+                    <div class="col-md-4">
                         <div class="policy_box">
                             <div class="icon-box "><i class="fas fa-users"></i></div>
                             <div class="title-box ">Chính sách phát triển nhân lực</div>
-                            <div class="val-box ">Đào tạo bài bản từ nhân viên chưa có kinh nghiệm để trở thành các Chuyên viên chuyên nghiệp </div>
+                            <div class="val-box ">Đào tạo bài bản từ nhân viên chưa có kinh nghiệm để trở thành các
+                                Chuyên viên chuyên nghiệp </div>
                         </div>
                     </div>
-                    <div class="col-md-4" >
+                    <div class="col-md-4">
                         <div class="policy_box">
                             <div class="icon-box "><i class="fas fa-graduation-cap"></i></div>
                             <div class="title-box ">CƠ HỘI THĂNG TIẾN</div>
@@ -198,7 +204,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="policy_box" >
+                        <div class="policy_box">
                             <div class="icon-box "><i class="fas fa-dollar-sign"></i></div>
                             <div class="title-box ">LƯƠNG, THƯỞNG, LỢI NHUẬN</div>
                             <div class="val-box ">
@@ -349,17 +355,17 @@
         </div>
     </div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
