--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
 <body>
   <div class="container-fluid" id="header">
     <div id="banner">
-      <!-- <img src="images/BM8U6FrysCcQpXoqJzgl.webp" alt="" style="width:100%; height: 480px;"> -->
-      <div class="container" style="padding-top: 350px;">
-        <div id="logo_head">
-          <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
-        </div>
-        <div id="name_head">
-          <h1>Công ty TNHH Bibabo</h1>
-          <div>
-            <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+      <div class="cover_body">
+        <div class="container">
+          <div id="logo_head">
+            <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
+          </div>
+          <div id="name_head">
+            <h1>Công ty TNHH Bibabo</h1>
+            <div>
+              <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="container" id="menu">
-      <ul class="nav justify-content-center nav_fix d-flex">
+      <ul class="nav justify-content-center ">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Trang chủ</a>
         </li>
@@ -63,19 +64,19 @@
                 <a href="">Trưởng Nhóm Content Marketing (Thu Nhập 20-30 Triệu)</a>
               </div>
               <div class="row">
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                   <i class="far fa-calendar-alt"></i>
                   <span>28/02/2020</span>
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                   <i class="fas fa-map-marker-alt"></i>
                   <span>Hà Nội</span>
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                   <i class="fas fa-dollar-sign"></i>
                   <span>10-15 triệu</span>
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                   <i class="far fa-clock"></i>
                   <span>Toàn thời gian</span>
                 </div>
@@ -348,7 +349,7 @@
     <div id="footer_top">
       <div class="container">
         <div class="row">
-          <div class="col-md-7 col-sm-12 footer_top_left">
+          <div class=" col-sm-12 col-md-7 footer_top_left">
             <div class="row">
               <div class="col-xs-6 col-sm-3 ">
                 <h5>Ứng viên</h5>
@@ -407,7 +408,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 col-sm-12 footer_top_right">
+          <div class="col-sm-12 col-md-5 footer_top_right">
             <div class="footer_logo" style="margin-bottom: 20px;">
               <a href="#">
                 <img src="https://www.topcv.vn/v3/images/topcv-logo-4.png" alt="topcv-logo" style="width: 110px;">
