--- a/tuyendung.html
+++ b/tuyendung.html
@@ -19,21 +19,22 @@
 <body>
     <div class="container-fluid" id="header">
         <div id="banner">
-            <!-- <img src="images/BM8U6FrysCcQpXoqJzgl.webp" alt="" style="width:100%; height: 480px;"> -->
-            <div class="container" style="padding-top: 350px;">
-                <div id="logo_head">
-                    <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
-                </div>
-                <div id="name_head">
-                    <h1>Công ty TNHH Bibabo</h1>
-                    <div>
-                        <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+            <div class="cover_body">
+                <div class="container">
+                    <div id="logo_head">
+                        <img src="https://static.topcv.vn/company_logos/cong-ty-tnhh-bibabo-5f7d6b981f08b.jpg" alt="">
+                    </div>
+                    <div id="name_head">
+                        <h1>Công ty TNHH Bibabo</h1>
+                        <div>
+                            <a href="#" style="color: #fff">Top Công ty Thương mại điện tử</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container" id="menu">
-            <ul class="nav justify-content-center nav_fix d-flex">
+            <ul class="nav justify-content-center ">
                 <li class="nav-item">
                     <a class="nav-link " href="index.html">Trang chủ</a>
                 </li>
@@ -57,17 +58,21 @@
             <div class="main_search">
                 <form action="" method="POST">
                     <div class="row">
-                        <div class="col-sm-10 ">
+                        <div class="col-sm-10">
                             <div class="form-row">
-                                <div class="input-group col-sm-6">
+                                <div class="input-group col-sm-6 col-xs-12">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addon-wrapping"><i class="fas fa-search"></i></span>
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-search"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Tìm công việc, vị trí muốn ứng tuyển..." aria-label="Username" aria-describedby="addon-wrapping">
+                                    <input type="text" class="form-control"
+                                        placeholder="Tìm công việc, vị trí muốn ứng tuyển..." aria-label="Username"
+                                        aria-describedby="addon-wrapping">
                                 </div>
-                                <div class="input-group col-sm-3">
+                                <div class="input-group col-sm-3 col-xs-12">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addon-wrapping"><i class="fas fa-map-marker-alt"></i></span>
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-map-marker-alt"></i></span>
                                     </div>
                                     <select id="inputState" class="form-control">
                                         <option selected>Tất cả các địa điểm</option>
@@ -76,9 +81,10 @@
                                         <option>Đà Nẵng</option>
                                     </select>
                                 </div>
-                                <div class="input-group col-sm-3">
+                                <div class="input-group col-sm-3 col-xs-12">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addon-wrapping"><i class="fas fa-tools"></i></span>
+                                        <span class="input-group-text" id="addon-wrapping"><i
+                                                class="fas fa-tools"></i></span>
                                     </div>
                                     <select id="inputState" class="form-control">
                                         <option selected>Tất cả ngành nghề</option>
@@ -94,8 +100,11 @@
                     <div class="col-sm-3 col-xs-12"></div> -->
                         </div>
                         <div class="col-sm-2">
-                            <div class="form-group">
-                                <button type="button" class="form-control btn btn-primary"><i class="fas fa-search"></i> Tìm kiếm</button>
+                            <div class="row">
+                                <div class="input-group col-xs-12" style="padding: 0 12px;"   >
+                                    <button type="button" class="form-control btn btn-primary"><i class="fas fa-search"></i>
+                                        Tìm kiếm</button>
+                                </div>
                             </div>
                         </div>
                     </div>
