--- a/danhgia.html
+++ b/danhgia.html
@@ -51,7 +51,8 @@
         </div>
     </div>
     <div id="main">
-        <div class="container" style="max-width: initial;">
+        <!-- <div class="container" style="max-width: initial;"> -->
+        <div class="container" >
             <div id="review">
                 <div class="row">
                     <div class="col-md-8 col-xs-12">
