--- a/danhgia.html
+++ b/danhgia.html
@@ -93,7 +93,7 @@
                                 nhân viên của Công ty TNHH Bibabo và được thể hiện trong CV (CV đã tạo trên hệ thống
                             </div>
                             <div class="text-center">
-                                <a href="" class="btn btn-primary">Tạo đánh giá ngay</a>
+                                <a href="" class="btn btn-premium">Tạo đánh giá ngay</a>
                             </div>
                         </div>
                         <div class="box box_white">
