--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
       </div>
       <div class="text-center" style="margin: 10px 0;">
-        <a class="btn btn-primary" href="tuyendung.html">Xem thêm <i class="fas fa-angle-right"></i></a>
+        <a class="btn btn-premium" href="tuyendung.html">Xem thêm <i class="fas fa-angle-right"></i></a>
       </div>
     </div>
     <div class="container">
@@ -243,7 +243,7 @@
           </div>
         </div>
         <div class="text-center">
-          <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+          <a class="btn btn-premium" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
             aria-controls="collapseExample">
             Xem thêm <i class="fas fa-angle-right"></i>
           </a>
@@ -270,8 +270,8 @@
                   <div class="val-box item-box">100-499</div>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="box" style="background: #fff;">
+              <div class="col-md-4" style="background: #fff;">
+                <div class="box">
                   <div class="icon-box item-box"><i class="fas fa-birthday-cake"></i></div>
                   <div class="title-box item-box">Tuổi trung bình</div>
                   <div class="val-box item-box">25</div>
@@ -303,7 +303,7 @@
                 con cái và gia
                 đình được Dễ dàng hơn - Hạnh phúc hơn!</p>
               <div style="margin: 10px 0;">
-                <a class="btn btn-primary" href="#">Tìm hiểu thêm <i class="fas fa-angle-right"></i></a>
+                <a class="btn btn-premium" href="#">Tìm hiểu thêm <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
