--- a/gioithieu.html
+++ b/gioithieu.html
@@ -139,7 +139,7 @@
                                 con cái và gia
                                 đình được Dễ dàng hơn - Hạnh phúc hơn!</p>
                             <div style="margin: 10px 0;">
-                                <a class="btn btn-primary" href="#">Tìm hiểu thêm <i class="fas fa-angle-right"></i></a>
+                                <a class="btn btn-premium" href="#">Tìm hiểu thêm <i class="fas fa-angle-right"></i></a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-12">
@@ -187,6 +187,10 @@
         </div>
         <div class="container">
             <div id="policy">
+                <div class="main_top">
+                    <h3>Chính sách và phúc lợi</h3>
+                    <hr>
+                </div>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <div class="policy_box">
