--- a/tuyendung.html
+++ b/tuyendung.html
@@ -62,7 +62,7 @@
                             <div class="form-row">
                                 <div class="input-group col-sm-6 col-xs-12">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addon-wrapping"><i
+                                        <span class="input-group-text" id="addon-wrapping" ><i
                                                 class="fas fa-search"></i></span>
                                     </div>
                                     <input type="text" class="form-control"
@@ -75,7 +75,7 @@
                                                 class="fas fa-map-marker-alt"></i></span>
                                     </div>
                                     <select id="inputState" class="form-control">
-                                        <option selected>Tất cả các địa điểm</option>
+                                        <option selected>Tất cả địa điểm</option>
                                         <option>Hà Nội</option>
                                         <option>Hồ Chí Minh</option>
                                         <option>Đà Nẵng</option>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="input-group col-sm-3 col-xs-12">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text" id="addon-wrapping"><i
+                                        <span class="input-group-text" id="addon-wrapping" ><i
                                                 class="fas fa-tools"></i></span>
                                     </div>
                                     <select id="inputState" class="form-control">
@@ -101,8 +101,9 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="row">
-                                <div class="input-group col-xs-12" style="padding: 0 12px;"   >
-                                    <button type="button" class="form-control btn btn-primary"><i class="fas fa-search"></i>
+                                <div class="input-group col-xs-12" >
+                                    <button type="button" class="form-control btn btn-premium"><i
+                                            class="fas fa-search"></i>
                                         Tìm kiếm</button>
                                 </div>
                             </div>
