--- a/gioithieu.html
+++ b/gioithieu.html
@@ -13,7 +13,17 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/myCSS.css">
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(window).scroll(function () {
+            var sticky = $('.sticky'),
+                scroll = $(window).scrollTop();
 
+            if (scroll >= 508) sticky.addClass('fixed');
+            else sticky.removeClass('fixed');
+        });
+    </script>
 </head>
 
 <body>
@@ -33,21 +43,23 @@
                 </div>
             </div>
         </div>
-        <div class="container" id="menu">
-            <ul class="nav justify-content-center ">
-                <li class="nav-item">
-                    <a class="nav-link " href="index.html">Trang chủ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="tuyendung.html">Tuyển dụng</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="gioithieu.html">Giới thiệu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="danhgia.html">Đánh giá</a>
-                </li>
-            </ul>
+        <div class="sticky">
+            <div class="container">
+                <ul class="nav justify-content-center ">
+                    <li class="nav-item">
+                        <a class="nav-link " href="index.html">Trang chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="tuyendung.html">Tuyển dụng</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="gioithieu.html">Giới thiệu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="danhgia.html">Đánh giá</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="main">
